@@ -19,7 +19,7 @@ import machines
 import element
 import itertools
 
-logger = logging.getLogger(__name__)
+_logger = logging.getLogger(__name__)
 
 #__all__ = [
 #    'addGroup', 'addGroupMembers', 'eget',  
@@ -138,7 +138,7 @@ def _reset_trims(verbose=False):
     else:
         caput(pv, 0.0)
 
-    logger.info("reset all trims")
+    _logger.info("reset all trims")
     #print "DONE"
 
 
@@ -627,7 +627,7 @@ def getTwiss(names, columns, **kwargs):
     src = kwargs.pop("source", "database")
     if src == "database":
         if not machines._lat._twiss:
-            logger.error("ERROR: no twiss data loaded")
+            _logger.error("ERROR: no twiss data loaded")
             return None
         return machines._lat._twiss.get(names, col=col)
     elif src == "VA":
@@ -657,7 +657,7 @@ def getTwissAt(s, columns, **kwargs):
     src = kwargs.pop("source", "database")
     if src == "database":
         if not machines._lat._twiss:
-            logger.error("ERROR: no twiss data loaded")
+            _logger.error("ERROR: no twiss data loaded")
             return None
         return machines._lat._twiss.at(s, col=col)
     else:
@@ -940,7 +940,7 @@ def _reset_bpm_offset():
         #print b.pv(tags=['aphla.offset', 'aphla.eput'])
         pvs.extend(b.pv(tags=['aphla.offset', 'aphla.eput']))
     if pvs: caput(pvs, 0.0)
-    logger.info("Reset the bpm offset")
+    _logger.info("Reset the bpm offset")
 
 
 def _reset_quad():
@@ -1197,7 +1197,7 @@ def saveLattice(output, lat, elemflds, notes, **kwargs):
     return nlive, ndead
 
 
-def loadLattice(h5fname, elemflds, **kwargs):
+def putLattice(h5fname, elemflds, **kwargs):
     """
     """
     nstep = kwargs.get("nstep", 3)
@@ -1244,7 +1244,7 @@ def outputFileName(group, subgroup, create_path = True):
         output_dir = os.path.join(output_dir, subdir)
         if not os.path.exists(output_dir):
             if create_path:
-                logger.info("creating new directory: {0}".format(output_dir))
+                _logger.info("creating new directory: {0}".format(output_dir))
                 os.mkdir(output_dir)
                 os.chmod(output_dir, stat.S_ISGID | stat.S_IRWXU | stat.S_IRWXG | \
                          stat.S_IROTH | stat.S_IXOTH)
@@ -1442,5 +1442,55 @@ def getBoundedElements(group, s0, s1):
 
     return ([e for i,e in enumerate(allelems) if inside[i]],
             [e for i,e in enumerate(allelems) if not inside[i]])
+
+
+def saveElement(elem, output, h5group = "/"):
+    """
+    save element info to HDF5 file *output* in *h5group*
+    """
+    import h5py
+    h5f = h5py.File(output)
+    grp = h5f.require_group(h5group)
+    for fld in elem.fields():
+        try:
+            val = elem.get(fld, handle="setpoint", unitsys=None)
+            grp[fld + ".sp"] = val
+        except:
+            pass
+        try:
+            val = elem.get(fld, handle="readback", unitsys=None)
+            grp[fld + ".rb"] = val
+        except:
+            pass
+    grp.attrs["name"]   = elem.name
+    grp.attrs["family"] = elem.family
+    grp.attrs["cell"]   = elem.cell
+    grp.attrs["girder"] = elem.girder
+    h5f.close()
+
+
+def putElement(elem, output, h5group = "/", force = False):
+    """
+    put saved element data to hardware
+    """
+    import h5py
+    h5f = h5py.File(output, 'r')
+    grp = h5f[h5group]
+
+    if elem.name != grp.attrs["name"]:
+        _logger.warn("not same element name: %s != %s" % (
+                elem.name, grp.attrs["name"]))
+        if not force:
+            h5f.close()
+            return
+
+    for fld in elem.fields():
+        dsname = fld + '.sp'
+        if dsname not in grp.keys():
+            _logger.warn("%s not found in %s/%s" % (dsname, output, h5group))
+            continue
+        val = grp[dsname].value
+        elem.put(fld, val, unitsys=None)
+    h5f.close()
 
 
