@@ -1,3 +1,8 @@
+2014-09-09  Lingyun Yang  <lyyang@debian7>
+
+	* add dms/nsls2.py for physics IOC
+	* add saveElement/putElement
+
 2013-01-06  Lingyun Yang  <lyyang@nsls2yang.nsls2.bnl.gov>
 
 	* merge heads
